--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ img {
     background-color: white;
 }
 .red-home-coin {
-    background-color: red;
+    /* background-color: red; */
     border-radius: 50%;
 }
 .green-home {
@@ -55,7 +55,7 @@ img {
     background-color: white;
 }
 .green-home-coin {
-    background-color: green;
+    /* background-color: green; */
     border-radius: 50%;
 }
 .blue-home {
@@ -67,7 +67,7 @@ img {
     background-color: white;
 }
 .blue-home-coin {
-    background-color: blue;
+    /* background-color: blue; */
     border-radius: 50%;
 }
 .yellow-home {
@@ -79,7 +79,7 @@ img {
     background-color: white;
 }
 .yellow-home-coin {
-    background-color: yellow;
+    /* background-color: yellow; */
     border-radius: 50%;
 }
 .transform-nw {
