--- a/index.css
+++ b/index.css
@@ -21,8 +21,8 @@ body {
 }
 
 img {
-    width: 30px;
-    height: 30px;
+    /* width: 30px; */
+    height: 25px;
 }
 
 .box {
@@ -113,3 +113,10 @@ img {
 /* .div .child > .child1 */
 
 /* img[src="value"] */
+
+.safe {
+    background-image: url("./star.svg");
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
